--- a/pom.xml
+++ b/pom.xml
@@ -20,9 +20,6 @@
 		<dbunit.version>2.2</dbunit.version>
 		<skipTests>true</skipTests>
 		<project.encoding>UTF-8</project.encoding>
-		<maven.compiler.plugin.version>3.3</maven.compiler.plugin.version>
-		<maven.surefire.plugin.version>2.19</maven.surefire.plugin.version>
-		<maven.tomcat7.plugin.version>2.0</maven.tomcat7.plugin.version>
 		<project.build.sourceVersion>1.7</project.build.sourceVersion>
 		<project.build.targetVersion>1.7</project.build.targetVersion>
 	</properties>
@@ -154,7 +151,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>${maven.compiler.plugin.version}</version>
 				<configuration>
 					<source>${project.build.sourceVersion}</source>
 					<target>${project.build.targetVersion}</target>
@@ -164,15 +160,13 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>${maven.surefire.plugin.version}</version>
 				<configuration>
-					<skipTests>${skipTests}</skipTests>
+					<testFailureIgnore>${skipTests}</testFailureIgnore>
 				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.tomcat.maven</groupId>
 				<artifactId>tomcat7-maven-plugin</artifactId>
-				<version>${maven.tomcat7.plugin.version}</version>
 				<configuration>
 					<path>/</path>
 					<port>80</port>
@@ -182,7 +176,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
-				<version>2.4</version>
 				<configuration>
 					<warSourceDirectory>src/main/webapp</warSourceDirectory>
 					<warName>SpringHibernateExample</warName>
